--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
         <!-- 주석 -->
          <h1 style="text-align: center;">네이버</h1>
+         <img src="./">
          <div class="utility">
             <ul>
                 <li>뉴스</li>
