--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=safari">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
         <title>테스트</title>
     </head>
     <body>
         <!-- 주석 -->
          <h1 style="text-align: center;">네이버</h1>
-         <img src="./">
+         <div style="text-align: center;">
+            <input type="search">
+         </div>
          <div class="utility">
             <ul>
                 <li>뉴스</li>
